--- a/clientBlogs/src/components/css/Header.css
+++ b/clientBlogs/src/components/css/Header.css
@@ -66,7 +66,7 @@
     }
 }
 
-@media only screen and (min-width: 315px) and (max-width:767px) {
+@media only screen and (min-width: 200px) and (max-width:900px) {
     .appbar {
         border: none !important;
         box-shadow: none !important;
@@ -85,5 +85,15 @@
         display: none !important;
     }
 
-
+    .appbar #loginBtnContainer .loginBtn {
+        color: #F74D79;
+        border: 1px solid #F74D79;
+        background-color: rgba(255, 95, 95, 0.154);
+        background-color: #ff6f6f26;
+        margin: 10px;
+        height: 32px;
+        width: 60px;
+        font-size: 13px;
+        margin-right: 0px;
+    }
 }
